# amalgam

./: .gitignore  README.md  init.sh  project.sh  requirements.txt
my-project/: README.md  pyproject.toml  requirements.txt  template.env  zrb_init.py
my-project/.github/workflows/: _zrb.yml
my-project/_automate/_project/: build_project_images.py  deploy_project.py  destroy_project.py  push_project_images.py  remove_project_containers.py  start_project.py  start_project_containers.py  stop_project_containers.py
my-project/_automate/fastapp/: _common.py  container.py  deployment.py  frontend.py  image.py  local.py  local_microservices.py  test.py
my-project/_automate/myapp/: __init__.py  _checker.py  _common.py  _config.py  _constant.py  _env.py  _env_file.py  _get_start_microservices.py  _group.py  _helper.py  _input.py  container.py  deployment.py  destroy.py  frontend.py  image.py  init-pulumi-stack.sh  load_test.py  local.py  local_microservices.py  test.py  test.sh
my-project/myapp/: README.md  config.py  main.py  template.env  test.sh
my-project/myapp/_zrb/: config.py  format_task.py  group.py  input.py  task.py  task_util.py  util.py  venv_task.py
my-project/myapp/common/: app_factory.py  base_db_repository.py  base_service.py  db_engine_factory.py  logger_factory.py  parser_factory.py
my-project/myapp/schema/: book.py  user.py
my-project/myapp/test/: test_health_and_readiness.py  test_homepage.py  test_not_found_error.py
my-project/src/fastapp/: all-module-disabled.env  docker-compose.yml
my-project/src/myapp/: README.md  all-module-enabled.env  (+3 more)
(+405 files in other folders)
