[tool.poetry]
name = "my-project"
version = "0.0.1"
description = "Just another Zrb project"
authors = ["gofrendi <gofrendi@gmail.com>"]
keywords = []
packages = [
  {include = "my-project", from = ".."},
]

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
zrb = ">=0.25.0"

[tool.poetry.dev-dependencies]
flake8 = "~7.0.0"
black = "~24.3.0"
isort = "~5.13.2"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
